# ARCEngine

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  verify_ct03.py
arcengine/: __init__.py  base_game.py  camera.py  enums.py  interfaces.py  level.py  py.typed  sprites.py
docs/: 06-February-2026-ct03-rewrite-plan.md  Arc3Colors.md  DESIGN_SymCascade.md  DESIGN_chain_reaction.md  DESIGN_world_shifter.md  GAME_DEVELOPER_GLOSSARY.md  Priority.md
docs/Reference/Engine-Reference/: Documentation-Index.md
docs/plans/: 020626-ct03-cascade-tiles.md  06-February-2026-documentation-index-plan.md  07-February-2026-gw01-cleanup-plan.md  07-February-2026-ws04-fix-plan.md  2026-02-05-ws03-color-and-energy-fix-plan.md
environment_files/ws03/v1/: metadata.json
environment_files/ws04/v1/: metadata.json
examples/: DESIGN_echo_64.md  complex_maze.py  merge_detach.py  simple_maze.py
games/: __init__.py
games/chain_reaction/: __init__.py  game.py  levels.py  sprites.py
games/official/: __init__.py  ct01.py  ct03.py  gravity_well.py  gw02.py  ws01.py  ws01a.md  ws02.py  ws03.py  ws04.py
games/world_shifter/: __init__.py  game.py  levels.py  sprites.py
tests/: __init__.py  test_base_game.py  test_camera.py  test_interfaces.py  test_level.py  test_sprites.py
