[project]
name = "arcengine"
version = "0.1.13"
description = "A Python library using numpy"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "numpy>=1.24.0",
    "pydantic>=2.10.6",
]


[project.optional-dependencies]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.4",
]

[tool.mypy]
strict = true
disallow_untyped_defs = true
exclude = [
    "tests",
]
plugins = ["pydantic.mypy"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff]
line-length = 280

[tool.setuptools.package-data]
"arcengine" = ["py.typed"]
