[build-system]
requires = ["uv_build >= 0.9.26, <0.10.0"]
build-backend = "uv_build"

[project]
name = "arcengine"
version = "0.9.3"
description = "A Python library using numpy"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "arcprizefoundation", email = "team@arcprize.org"},
]
dependencies = [
    "numpy>=1.24.0",
    "pydantic>=2.10.6",
]


[project.optional-dependencies]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.4",
]

[tool.mypy]
strict = true
disallow_untyped_defs = true
exclude = [
    "tests",
]
plugins = ["pydantic.mypy"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff]
line-length = 280

[tool.setuptools.package-data]
"arcengine" = ["py.typed"]
